# luckfox_pico_lvgl_example

./: CMakeLists.txt  build.sh
bk/: camera copy.c  camera copy.h  camera uyvy.c  camera uyvy.h
lib/opencv4/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake
src/: MLX90640_API.c  MLX90640_API.h  MLX90640_I2C_Driver.c  MLX90640_I2C_Driver.h  MLX90640_lvgl.c  MLX90640_lvgl.h  camera.cpp  camera.h  gettick.c  lvgl_chart.cpp  lvgl_chart.h  main.cpp  nrf24.cpp  nrf24.h  thermal_display.cpp  thermal_display.h
ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
ui/components/: ui_comp.h  ui_comp_btnclick.c  ui_comp_btnclick.h  ui_comp_hook.c  ui_comp_hook.h
ui/screens/: ui_Screen1.c
